Reorg code and docs