@@ -1,86 +1,89 @@
 package org.stubit.random;
 
 import java.security.SecureRandom;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.List;
+import java.util.Map;
 
 /** Randomly select an element from a collection of choices. */
 public class RandomChoice {
 
-  private static final SecureRandom random = new SecureRandom();
-
   private RandomChoice() {}
-
-  /**
-   * Randomly selects an element from the provided choices.
-   *
-   * @param choices an array of choices
-   * @return a randomly selected element from the provided choices
-   * @param <T> the type of the choices
-   */
-  @SafeVarargs
-  public static <T> T chooseAnyFrom(T... choices) {
-    int size = choices.length;
-    if (size == 0) {
-      throw new IllegalArgumentException("No choices provided");
-    }
-    return choices[random.nextInt(size)];
-  }
 
   /**
    * Randomly selects an element from the provided choices {@link Collection}.
    *
    * @param choices a {@link Collection} of choices
-   * @return a randomly selected element from the provided choices
    * @param <T> the type of the choices
+   * @return a randomly selected element from the provided choices
    */
   public static <T> T chooseAnyFrom(Collection<T> choices) {
-    int size = choices.size();
-    if (size == 0) {
-      throw new IllegalArgumentException("No choices provided");
-    }
-    return choices.stream()
-        .skip(random.nextInt(size))
-        .findFirst()
-        .orElseThrow(() -> new RuntimeException("Should not happen"));
+    return aChoiceFrom(choices).build();
   }
 
   /**
-   * @param choices a {@link Collection} of choices
-   * @return a new {@link Builder} with the provided choices
-   * @param <T> the type of the choices
+   * Randomly selects an element from the provided choices {@link Map}.
+   *
+   * @param choices a {@link Map} of choices
+   * @param <K> the type of the choices keys
+   * @param <V> the type of the choices values
+   * @return a randomly selected element from the provided choices
    */
-  public static <T> Builder<T> from(Collection<T> choices) {
-    return new Builder<>(choices);
+  public static <K, V> Map.Entry<K, V> chooseAnyFrom(Map<K, V> choices) {
+    return aChoiceFrom(choices.entrySet()).build();
   }
 
   /**
-   * @param enumType the {@link Enum} type
-   * @return a new {@link Builder} with the provided enumType's values as choices
-   * @param <T> the type of the choices
-   */
-  public static <T extends Enum<?>> Builder<T> fromValuesOf(Class<? extends T> enumType) {
-    return from(Arrays.asList(enumType.getEnumConstants()));
-  }
-
-  /**
+   * Randomly selects an element from the provided choices.
+   *
    * @param choices an array of choices
-   * @return a new {@link Builder} with the provided choices
    * @param <T> the type of the choices
+   * @return a randomly selected element from the provided choices
    */
   @SafeVarargs
-  public static <T> Builder<T> from(T... choices) {
-    return from(Arrays.asList(choices));
+  public static <T> T chooseAnyFrom(T... choices) {
+    return aChoiceFrom(choices).build();
   }
 
   /**
    * Randomly selects an element from the values of the provided choices {@link Enum} class.
    *
    * @param enumType the {@link Enum} type
-   * @return a randomly selected {@link Enum} constant from the provided choices enumType
    * @param <T> the type of the choices
+   * @return a randomly selected {@link Enum} constant from the provided choices enumType
    */
   public static <T extends Enum<?>> T chooseAnyFromValuesOf(Class<? extends T> enumType) {
     return chooseAnyFrom(enumType.getEnumConstants());
+  }
+
+  /**
+   * @param choices a {@link Collection} of choices
+   * @param <T> the type of the choices
+   * @return a new {@link Builder} with the provided choices
+   */
+  public static <T> Builder<T> aChoiceFrom(Collection<T> choices) {
+    return new Builder<>(choices);
+  }
+
+  /**
+   * @param choices an array of choices
+   * @param <T> the type of the choices
+   * @return a new {@link Builder} with the provided choices
+   */
+  @SafeVarargs
+  public static <T> Builder<T> aChoiceFrom(T... choices) {
+    return aChoiceFrom(Arrays.asList(choices));
+  }
+
+  /**
+   * @param enumType the {@link Enum} type
+   * @param <T> the type of the choices
+   * @return a new {@link Builder} with the provided enumType's values as choices
+   */
+  public static <T extends Enum<?>> Builder<T> aChoiceFromValuesOf(Class<? extends T> enumType) {
+    return aChoiceFrom(Arrays.asList(enumType.getEnumConstants()));
   }
 
   /** Randomly selects an element from a collection of choices. */
@@ -98,15 +101,23 @@ public class RandomChoice {
     }
 
     /**
-     * Excludes the provided choices from the selection
+     * Add the provided additional choices to the selection
      *
-     * @param excluded the excluded choices
-     * @return this
-     * @throws IllegalArgumentException if no choices remain
+     * @param additionalChoices the additional choices
+     */
+    public Builder<T> and(Collection<T> additionalChoices) {
+      this.choices.addAll(additionalChoices);
+      return this;
+    }
+
+    /**
+     * Add the provided additional choices to the selection
+     *
+     * @param additionalChoices the additional choices
      */
     @SafeVarargs
-    public final Builder<T> save(T... excluded) {
-      return save(Arrays.asList(excluded));
+    public final Builder<T> and(T... additionalChoices) {
+      return and(List.of(additionalChoices));
     }
 
     /**
@@ -116,7 +127,7 @@ public class RandomChoice {
      * @return this
      * @throws IllegalArgumentException if no choices remain
      */
-    public Builder<T> save(Collection<T> excluded) {
+    public Builder<T> butNot(Collection<T> excluded) {
       this.choices.removeAll(excluded);
       if (choices.isEmpty()) {
         throw new IllegalArgumentException("No choices left");
@@ -125,11 +136,23 @@ public class RandomChoice {
     }
 
     /**
-     * Returns and removes a randomly selected element from the {@link #choices}.
+     * Excludes the provided choices from the selection
+     *
+     * @param excluded the excluded choices
+     * @return this
+     * @throws IllegalArgumentException if no choices remain
+     */
+    @SafeVarargs
+    public final Builder<T> butNot(T... excluded) {
+      return butNot(Arrays.asList(excluded));
+    }
+
+    /**
+     * Returns a randomly selected element from the {@link #choices}.
      *
      * @return a randomly selected element form the {@link #choices}
      */
-    public T chooseAny() {
+    public T build() {
       return choices.get(random.nextInt(choices.size()));
     }
   }
